unpackaged/main/default/objects/HarcodedID__c/HarcodedID__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>HarcodedID</label>
</CustomObject>