unpackaged/main/default/objects/HarcodedID__c/fields/RT_Fabrication__c.field-meta.xml
<CustomField>
    <fullName>RT_Fabrication__c</fullName>
    <label>RT Fabrication</label>
    <length>20</length>
    <type>Text</type>
</CustomField>