unpackaged/main/default/objects/HarcodedID__c/fields/RT_Location__c.field-meta.xml
<CustomField>
    <fullName>RT_Location__c</fullName>
    <label>RT Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>