unpackaged/main/default/objects/HarcodedID__c/fields/RT_Order_Client__c.field-meta.xml
<CustomField>
    <fullName>RT_Order_Client__c</fullName>
    <label>RT Order Client</label>
    <length>20</length>
    <type>Text</type>
</CustomField>