unpackaged/main/default/objects/HarcodedID__c/fields/RT_Transport__c.field-meta.xml
<CustomField>
    <fullName>RT_Transport__c</fullName>
    <label>RT Transport</label>
    <length>20</length>
    <type>Text</type>
</CustomField>